<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.VIPActivity">
    <RelativeLayout
        android:id="@+id/rl_head"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/clc_white"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/icon_left_arrow" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="申请VIP"
            android:textColor="@color/clc_gray"
            android:textSize="25dp" />
    </RelativeLayout>

    <LinearLayout
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/tv_vip_1"
            android:layout_marginTop="5dp"
            android:textSize="15dp"
            android:textColor="@color/clc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/tv_vip_2"
            android:layout_marginTop="5dp"
            android:textSize="15dp"
            android:textColor="@color/clc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/tv_vip_3"
            android:layout_marginTop="5dp"
            android:textSize="15dp"
            android:textColor="@color/clc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/tv_vip_4"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/clc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/cb_ok"
            android:text="@string/tv_vip_5"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_ok"
        android:text="确认申请VIP"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/selector_main_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>